k8s/apps/hello-app/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hello-app-svc
spec:
  type: ClusterIP
  selector:
    app: helloworld
  ports:
    - port: 80
      targetPort: 8080
