k8s/apps/hello-app/base/istio-vs.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: hello-app-vs
spec:
  hosts:
    - "*.hello.local"
  gateways:
    - hello-app-gateway
  http:
    - route:
        - destination:
            host: hello-app-svc
            port:
              number: 80
